:notebook: fix email test error

--- a/jenkins-home/email-templates/jk-email-template.html
+++ b/jenkins-home/email-templates/jk-email-template.html
@@ -105,20 +105,20 @@
             <tr>
               <td id="email-footer-section" align="center" valign="top" style="font-size:10px;line-height:200%;text-align:center;color:#9ea3a8;padding-top:0px">
                 <span>
-                    <a href="https://travis-ci.org/account/preferences/unsubscribe?repository=5937819&amp;utm_medium=notification&amp;utm_source=email" style="color:#9ea3a8" target="_blank">Unsubscribe</a> from build emails from the {env.JOB_NAME} repository.
+                    <a href="#" style="color:#9ea3a8" target="_blank">Unsubscribe</a> from build emails from the {env.JOB_NAME} repository.
                 </span>
               </td>
             </tr>
             <tr>
               <td id="email-footer-section" align="center" valign="top" style="font-size:10px;line-height:200%;text-align:center;color:#9ea3a8;padding-top:0px">
                 <span>
-                  To unsubscribe from <strong>all</strong> build emails, please update your <a href="https://travis-ci.org/account/preferences/unsubscribe?utm_medium=notification&amp;utm_source=email" style="color:#9ea3a8" target="_blank">settings</a>.
+                  To unsubscribe from <strong>all</strong> build emails, please update your <a href="#" style="color:#9ea3a8" target="_blank">settings</a>.
                 </span>
               </td>
             </tr>
             <tr>
               <td id="travis-ci-footer-logo-section" style="text-align:center;text-align:center">
-                <a href="https://travis-ci.com" target="_blank"><img alt="black and white Jenkins ci logo" src="https://chocolatey.org/content/packageimages/jenkins.2.164.2.png" class="CToWUd"></a>
+                <a href="https://jenkins.io/" target="_blank"><img alt="black and white Jenkins ci logo" src="https://chocolatey.org/content/packageimages/jenkins.2.164.2.png" class="CToWUd"></a>
               </td>
             </tr>
             <tr>
