--- a/jenkins-home/email-templates/jk-email-template.html
+++ b/jenkins-home/email-templates/jk-email-template.html
@@ -20,14 +20,14 @@
                 </p>
               </td>
             </tr>
-            
+
             <tr>
               <td align="center" valign="top" style="padding-bottom:20px">
-                <table cellpadding="0" cellspacing="0" style="border-radius:3px;border:1px solid #32d282;width:100%">
-                  <tbody><tr style="background:rgba(50,210,130,0.1)">
-                    <td id="status-icon-section" align="center" valign="top" style="border-bottom:1px solid #32d282;padding:15px 15px">
+                <table cellpadding="0" cellspacing="0" style="border-radius:3px;border:1px solid {cssColorStatus};width:100%">
+                  <tbody><tr style="background:rgba({cssColorRgba})">
+                    <td id="status-icon-section" align="center" valign="top" style="border-bottom:1px solid {cssColorStatus};padding:15px 15px">
                     <div style="float:left">
-                      <div style="display:inline"><img alt="build has passed" style="display:inline;vertical-align:sub;width:17px;height:17px;padding-right:8px" src="https://s3.amazonaws.com/travis-email-assets/status-{buildStatus}.png" class="CToWUd"></div><div style="display:inline"><a id="status-section-message" class="{cssStatusClass}" style="color:{cssBgColor};font-size:16px;font-weight:600" href="{buildUrl}?utm_medium=notification&amp;utm_source=email" target="_blank">Build #{buildNumber} {buildStatus}</a></div>
+                      <div style="display:inline"><img alt="build has passed" style="display:inline;vertical-align:sub;width:17px;height:17px;padding-right:8px" src="https://s3.amazonaws.com/travis-email-assets/status-{buildStatus}.png" class="CToWUd"></div><div style="display:inline"><a id="status-section-message" class="{cssStatusClass}" style="color:{cssColorStatus};font-size:16px;font-weight:600" href="{buildUrl}?utm_medium=notification&amp;utm_source=email" target="_blank">Build #{buildNumber} {buildStatus}</a></div>
                     </div>
                       <div style="display:inline;float:left"><img id="arrow" alt="arrow to build time" style="width:7px;height:auto;vertical-align:text-bottom;padding:0px 8px" src="https://s3.amazonaws.com/travis-email-assets/success-arrow.png" class="CToWUd"></div>
                     <div style="float:right">
