--- a/jenkins-home/email-templates/jk-email-template.html
+++ b/jenkins-home/email-templates/jk-email-template.html
@@ -1,5 +1,5 @@
 <div style="min-width:100%;height:100%;margin:0;padding:0">
-    <table id="travis-ci-email-container" align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" style="height:100%;width:100%;padding:10px;font-family:'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;text-align:center;color:#333333;background-color:#f4f5f9;background-image:url('https://s3.amazonaws.com/travis-email-assets/build_background.png');height:100%;width:100%;padding:10px;font-family:'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;text-align:center;color:#333333;background-color:#f4f5f9;background-image:url('https://s3.amazonaws.com/travis-email-assets/build_background.png')">
+    <table id="travis-ci-email-container" align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" style="height:100%;width:100%;padding:10px;font-family:'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;text-align:center;color:#333333;background-color:#f4f5f9;background-image:url('https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/background.png');height:100%;width:100%;padding:10px;font-family:'Source Sans Pro','Helvetica Neue',Helvetica,Arial,sans-serif;line-height:150%;text-align:center;color:#333333;background-color:#f4f5f9;background-image:url('https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/background.png')">
       <tbody><tr>
         <td align="center" valign="top" style="padding-bottom:20px">
           <table id="email-content-container" border="0" cellpadding="0" cellspacing="0" style="width:500px;padding:32px;background-color:#ffffff;width:500px;padding:32px;background-color:#ffffff">
@@ -16,7 +16,7 @@
             <tr>
               <td id="branch-name-section" align="center" valign="top" style="padding-bottom:35px">
                 <p id="branch-name" style="margin:0px;font-size:28px;font-weight:300;margin:0px;font-size:28px;font-weight:300">
-                  <img alt="branch icon" style="width:16px;height:auto;padding-right:8px;vertical-align:bottom;width:16px;height:auto;padding-right:8px;vertical-align:bottom" src="https://s3.amazonaws.com/travis-email-assets/branch.png" class="CToWUd"><a id="branch-name-link" style="color:#333333;line-height:36px;text-decoration:none;border-bottom:1px solid #333333;text-decoration:none;border-bottom:1px solid #333333;padding-bottom:2px;line-height:36px" href="{gitUrl}/tree/{gitBranch}" target="_blank">{gitBranch}</a>
+                  <img alt="branch icon" style="width:16px;height:auto;padding-right:8px;vertical-align:bottom;width:16px;height:auto;padding-right:8px;vertical-align:bottom" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/git-branch.png" class="CToWUd"><a id="branch-name-link" style="color:#333333;line-height:36px;text-decoration:none;border-bottom:1px solid #333333;text-decoration:none;border-bottom:1px solid #333333;padding-bottom:2px;line-height:36px" href="{gitUrl}/tree/{gitBranch}" target="_blank">{gitBranch}</a>
                 </p>
               </td>
             </tr>
@@ -27,11 +27,11 @@
                   <tbody><tr style="background:rgba({cssColorRgba})">
                     <td id="status-icon-section" align="center" valign="top" style="border-bottom:1px solid {cssColorStatus};padding:15px 15px">
                     <div style="float:left">
-                      <div style="display:inline"><img alt="build has passed" style="display:inline;vertical-align:sub;width:17px;height:17px;padding-right:8px" src="https://s3.amazonaws.com/travis-email-assets/status-{buildStatus}.png" class="CToWUd"></div><div style="display:inline"><a id="status-section-message" class="{cssStatusClass}" style="color:{cssColorStatus};font-size:16px;font-weight:600" href="{buildUrl}?utm_medium=notification&amp;utm_source=email" target="_blank">Build #{buildNumber} {buildStatus}</a></div>
+                      <div style="display:inline"><img alt="build has passed" style="display:inline;vertical-align:sub;width:17px;height:17px;padding-right:8px" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/status-{buildStatus}.png" class="CToWUd"></div><div style="display:inline"><a id="status-section-message" class="{cssStatusClass}" style="color:{cssColorStatus};font-size:16px;font-weight:600" href="{buildUrl}?utm_medium=notification&amp;utm_source=email" target="_blank">Build #{buildNumber} {buildStatus}</a></div>
                     </div>
-                      <div style="display:inline;float:left"><img id="arrow" alt="arrow to build time" style="width:7px;height:auto;vertical-align:text-bottom;padding:0px 8px" src="https://s3.amazonaws.com/travis-email-assets/success-arrow.png" class="CToWUd"></div>
+                      <div style="display:inline;float:left"><img id="arrow" alt="arrow to build time" style="width:7px;height:auto;vertical-align:text-bottom;padding:0px 8px" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/{buildStatus}-arrow.png" class="CToWUd"></div>
                     <div style="float:right">
-                      <span><img id="build-time-clock-icon" alt="clock icon" style="width:15px;height:17px;padding-right:8px;vertical-align:sub" src="https://s3.amazonaws.com/travis-email-assets/time.png" class="CToWUd"></span><span style="font-size:14px">{buildDuration}</span>
+                      <span><img id="build-time-clock-icon" alt="clock icon" style="width:15px;height:17px;padding-right:8px;vertical-align:sub" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/time.png" class="CToWUd"></span><span style="font-size:14px">{buildDuration}</span>
                     </div>
                     </td>
                   </tr>
@@ -80,7 +80,7 @@
             <tbody><tr>
               <td id="documentation-section" align="center" valign="top">
                 <div>
-                  <img alt="book icon" id="documentation-icon" style="display:inline;vertical-align:bottom;padding-right:5px;display:inline;vertical-align:bottom;padding-right:5px" src="https://s3.amazonaws.com/travis-email-assets/documentation.png" class="CToWUd">
+                  <img alt="book icon" id="documentation-icon" style="display:inline;vertical-align:bottom;padding-right:5px;display:inline;vertical-align:bottom;padding-right:5px" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/documentation.png" class="CToWUd">
                   <p id="documentation-text" style="margin:0px;display:inline;font-size:26px;font-weight:300;color:#0068ff;font-size:26px;font-weight:300;color:#0068ff;display:inline">
                     <a id="documentation-link" href="https://jenkins.io/doc/" style="color:#0068ff" target="_blank">Documentation</a> about <span class="il">Jenkins</span> CI
                   </p>
@@ -118,12 +118,12 @@
             </tr>
             <tr>
               <td id="travis-ci-footer-logo-section" style="text-align:center;text-align:center">
-                <a href="https://jenkins.io/" target="_blank"><img alt="black and white Jenkins ci logo" src="https://chocolatey.org/content/packageimages/jenkins.2.164.2.png" class="CToWUd"></a>
+                <a href="https://jenkins.io/" target="_blank"><img alt="black and white Jenkins ci logo" src="https://raw.githubusercontent.com/eslabsid/jenkins-docker/master/assets/jenkins-120px.png" class="CToWUd"></a>
               </td>
             </tr>
             <tr>
               <td id="email-footer-section" style="font-size:10px;line-height:200%;text-align:center;color:#9ea3a8;padding-top:0px;color:#9ea3a8;font-size:10px;line-height:200%;text-align:center;color:#9ea3a8;padding-top:0px">
-                <p style="margin:0px;margin:0px"><span class="il">Jenkins</span> CI run by ESLabs ID
+                <p style="margin:0px;margin:0px"><span class="il">Jenkins</span>-CI run by ESLabs.ID
                   <span>Contact: <a style="color:#9ea3a8;color:#9ea3a8" href="mailto:jenkinsci@eslabs.id" target="_blank">jenkinsci@<span class="il">eslabs</span>.id</a> | Surakarta, Indonesia, 55772 | Unregistered company number: 0000-0000-0000</span>
                 </p>
               </td>
@@ -132,6 +132,5 @@
         </td>
       </tr>
     </tbody></table><div class="yj6qo"></div><div class="adL">
-    
   </div>
 </div>
