:email: add assets email notification

--- a/jenkins-home/email-templates/jk-email-template.html
+++ b/jenkins-home/email-templates/jk-email-template.html
@@ -6,7 +6,7 @@
             
             <tbody><tr>
               <td id="repo-username-section" align="center" valign="top" style="padding-bottom:20px;padding-bottom:20px">
-                <a id="repo-username-link" style="color:#333333;text-decoration:none;border-bottom:1px solid #333333;padding-bottom:4px;color:#333333;border-bottom:1px solid #333333;text-decoration:none;padding-bottom:4px" href="http://94.237.72.184:8080/blue/organizations/jenkins/jenkins-docker/activity?utm_medium=notification&amp;utm_source=email" target="_blank">
+                <a id="repo-username-link" style="color:#333333;text-decoration:none;border-bottom:1px solid #333333;padding-bottom:4px;color:#333333;border-bottom:1px solid #333333;text-decoration:none;padding-bottom:4px" href="{buildUrl}?utm_medium=notification&amp;utm_source=email" target="_blank">
                   <p style="margin:0px;font-size:30px;font-weight:600;line-height:36px;padding-left:5px;display:inline;font-size:30px;font-weight:600;line-height:36px;padding-right:5px;padding-left:0px">{registryOrg}</p>
                   <p id="repo-slug-divider" style="margin:0px;font-size:30px;font-weight:100;color:#9ea3a8;display:inline;font-size:30px;font-weight:100;color:#9ea3a8">/</p>
                   <p style="margin:0px;font-size:30px;font-weight:600;line-height:36px;padding-left:5px;display:inline;font-size:30px;font-weight:600;line-height:36px;padding-left:5px">{registryRepo}</p>
