:email: add assets email notification

--- a/jenkins-home/email-templates/jk-email-template.html
+++ b/jenkins-home/email-templates/jk-email-template.html
@@ -43,7 +43,7 @@
                         </p>
                       </div>
                       <div id="user-avatar-changeset-right" style="float:right;float:right">
-                        <a id="changeset-link" style="font-size:14px;font-weight:600;color:#0068ff;font-size:14px;color:#0068ff;font-weight:600" href="{gitUrl}/compare/{gitBranch}" target="_blank">{gitCommitHash} CHANGESET →</a>
+                        <a id="changeset-link" style="font-size:14px;font-weight:600;color:#0068ff;font-size:14px;color:#0068ff;font-weight:600" href="{gitUrl}/compare/{gitBranch}...{gitCommitId}" target="_blank">{gitCommitId} CHANGESET →</a>
                       </div>
                     </td>
                   </tr>
